--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@
 !05_artifacts/**
 !10_clinical_validation/
 !10_clinical_validation/**
+!README.md
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
