--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@
 !05_artifacts/**
 !10_clinical_validation/
 !10_clinical_validation/**
+!13_github_pages/
+!13_github_pages/**
 !README.md
 
 # Byte-compiled / optimized / DLL files
@@ -77,7 +79,6 @@ samconfig.toml
 # Paginas (AWS/GitHub Pages) - implementacoes
 # ============================================
 12_deploy_aws/
-13_github_pages/
 
 # ============================================
 # Data files (keep structure, ignore large files)
